# valoria-email-agent

./: .gitignore  CLAUDE.md  agent.py  app.py  email_template.py  generate_csv.py  generate_images.py  gmail_client.py  main.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
docs/superpowers/plans/: 2026-04-25-valoria-email-agent.md
docs/superpowers/specs/: 2026-04-25-valoria-email-agent-design.md
tests/: test_agent.py  test_email_template.py  test_gmail_client.py
