[project]
name = "tarea-2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.194.0",
    "google-auth-oauthlib>=1.3.1",
    "groq>=1.2.0",
    "polars>=1.40.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "streamlit>=1.56.0",
]
